# zero_forcing_ga

./: .gitignore  CMakeLists.txt  README.md  docs.tex  tmp_docs.tex
examples/: edge_list_parse_test.cpp  fort_cover_test.cpp  ga_ip_test1.cpp  ga_ip_test2.cpp  genetic_algorithm_random_test.cpp  genetic_algorithm_test.cpp  genetic_algorithm_test1.cpp  genetic_algorithm_test2.cpp  genetic_algorithm_test3.cpp  graph6_parse_test.cpp  nauty_test.cpp  random_sampler_test.cpp  sparse6_parse_test.cpp  wavefront_improvement_test.cpp  zero_forcing_closure_test.cpp  zf_closure_test.cpp
include/: fort_cover.hpp  genetic_algorithm.hpp  graph.hpp  random_sampler.hpp  zero_forcing.hpp
src/: fort_cover.cpp  genetic_algorithm.cpp  graph.cpp  random_sampler.cpp  zero_forcing.cpp
